adding api key on authentication more test is needed

--- a/client/moms_best/index.html
+++ b/client/moms_best/index.html
@@ -11,8 +11,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Mom's Best</title></head
-  >s
+    <title>Mom's Best</title>
+  </head>
   <body>
     <div id="root"></div>
     <script
